# project_evolution

./: .gitignore  BodyEvolution.py  Environment.py  Main_C1.py  Main_C2.py  Main_C3.py  Main_C4.py  Main_C5.py  Main_T1.py  Main_T2.py  Main_T3.py  Main_T4.py  Main_W1.py  Main_W2.py  Main_W3.py  NeuralEvolution.py  NeuralNetwork.py  Utilities.py  evogym.ipynb  gif.ipynb  main.py  pyproject.toml
Deprecated/: evogym.ipynb  gif.ipynb
