[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evogym>=2.0.0",
    "imageio>=2.37.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "setuptools<80",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
